<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MaterialTest</string>
    <string name="title_activity_main">Watch Air Algiers</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_detail">Detail</string>
    <string name="Avion">Avion : </string>
    <string name="numVol">N° :</string>
    <string name="De">Départ :</string>
    <string name="vesr">Destination :</string>
    <string name="etat">Etat</string>
    <string name="dure">Durée prévue :</string>
    <string name="porte">Porte :</string>
    <string name="escale">Escales :</string>
    <string name="heure">Heure d\'arrivée :</string>
    <string name="weather_sunny"></string>
    <string name="weather_clear_night"></string>
    <string name="open_weather_maps_app_id">3a0ce55f84c712a34d4eb8790da1f58f</string>
    <string name="weather_foggy"></string>
    <string name="weather_cloudy"></string>
    <string name="weather_rainy"></string>
    <string name="weather_snowy"></string>
    <string name="weather_thunder"></string>
    <string name="weather_drizzle"></string>
    <string name="place_not_found">Sorry, no weather data found.</string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="title_flight_list">Flights</string>
    <string name="title_flight_detail">Flight Detail</string>

</resources>
