<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/lay1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/background_material_dark"
        android:id="@+id/lay2"
        android:orientation="vertical"
            >

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:id="@+id/imageView"
                android:src="@drawable/ic_airalgerie"
                android:layout_marginTop="25dp"
                android:layout_marginLeft="20dp"
                android:layout_marginBottom="10dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="25dp"
                android:layout_marginLeft="20dp"
                android:background="@color/gray1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="center">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="DAH105"
                        android:textSize="@dimen/bigText"
                        android:textColor="#000"
                        android:id="@+id/numvolbl"/>

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/abc_text_size_title_material"
                        android:text="@string/Avion"
                        android:textColor="@color/textColor"
                        android:id="@+id/avion"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=" Boeing747"
                        android:textSize="@dimen/abc_text_size_title_material"
                        android:textColor="#000"
                        android:id="@+id/avionbl"/>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textSize="@dimen/abc_text_size_title_material"
            android:text="@string/etat"
            android:textColor="@color/textColor"
            android:id="@+id/etat"
            android:layout_gravity="center"
            android:gravity="center"
            android:background="@color/gray2"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/gray3">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/abc_text_size_title_material"
                    android:text="@string/De"
                    android:textColor="@color/textColor"
                    android:id="@+id/depart"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Alger"
                    android:textSize="@dimen/abc_text_size_title_material"
                    android:textColor="#000"
                    android:id="@+id/departbl"
                    android:layout_marginLeft="30dp"/>

                </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/abc_text_size_title_material"
                    android:text="@string/vesr"
                    android:textColor="@color/textColor"
                    android:id="@+id/arrivee"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Oran"
                    android:textSize="@dimen/abc_text_size_title_material"
                    android:textColor="#000"
                    android:id="@+id/arriveebl"
                    android:layout_marginLeft="30dp"/>

            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/gray4"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/text_app_name"
                android:textSize="@dimen/abc_text_size_title_material"
                android:text="@string/dure"
                android:textColor="@color/textColor"
                android:id="@+id/dure"
                android:layout_marginTop="10dp"/>

            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_below="@+id/porte"
                android:layout_height="wrap_content"
                android:textSize="@dimen/abc_text_size_title_material"
                android:layout_marginLeft="@dimen/text_app_name"
                android:text="@string/escale"
                android:textColor="@color/textColor"
                android:id="@+id/escale"/>

            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/abc_text_size_title_material"
                android:text="@string/heure"
                android:layout_marginLeft="@dimen/text_app_name"
                android:textColor="@color/textColor"
                android:id="@+id/heure"
                android:layout_marginBottom="10dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/gray5">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textSize="@dimen/abc_text_size_title_material"
                android:text="@string/porte"
                android:textColor="@color/textColor"
                android:id="@+id/porte"
                android:layout_marginLeft="30dp"
                android:layout_marginBottom="10dp"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>